cluster/manifests/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: default-web
      namespace: default
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
